# thread_io

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: reader.rs  writer.rs
ci/: script.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read.rs  write.rs
src/: lib.rs  read.rs  write.rs
tests/: read.rs  write.rs
