[package]
name = "thread_io"
version = "0.3.0"
authors = ["markschl <markschl19@gmail.com>"]
description = "Crate for performing I/O in background thread"
license = "MIT"
repository = "https://github.com/markschl/thread_io"
documentation = "https://docs.rs/thread_io"
readme = "README.md"
keywords = ["io", "thread", "concurrency"]
edition = "2018"

[dependencies]
crossbeam = "0.7"

[features]
crossbeam_channel = []

[badges]
travis = { repository = "https://travis-ci.org/markschl/thread_io" }
