
[package]
name = "thread_io-fuzz"
version = "0.2"
authors = ["markschl <markschl19@gmail.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
thread_io = { path = ".." }
libfuzzer-sys = { version = "0.3", features = ["arbitrary-derive"] }
arbitrary = { version = "0.4", features = ["derive"] }

[profile.release]
overflow-checks = true
debug-assertions = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "read"
path = "fuzz_targets/read.rs"

[[bin]]
name = "write"
path = "fuzz_targets/write.rs"
